Outliner view: icon's not updating, adding keyframes in group view does not work #30110

Closed
opened 2012-02-08 19:54:28 +01:00 by No One · 7 comments

%%%Blender 2.61.0, Win7 x64, GTX550Ti

If the Editor Type is "Outliner": when viewing a group and toggling Restrict Renderability for the group, the icon (for the group) will only update if the cursor is moved.

When trying to add a keyframe (using "i"), the keyframe will not be set when viewing groups (not for the group and neither for a single selected object).

I'd wish (feature request, sorry to put that here, too) when pressing "i" on the group a keyframe for all "children" would be created.

%%%

%%%Blender 2.61.0, Win7 x64, GTX550Ti If the Editor Type is "Outliner": when viewing a group and toggling Restrict Renderability for the group, the icon (for the group) will only update if the cursor is moved. When trying to add a keyframe (using "i"), the keyframe will not be set when viewing groups (not for the group and neither for a single selected object). I'd wish (feature request, sorry to put that here, too) when pressing "i" on the group a keyframe for all "children" would be created. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can't redo the problem exactly, but what I can see is that for objects the change happens immediately when the mouse button is pressed, while for groups it only happens when the mouse button is released.%%%

%%%I can't redo the problem exactly, but what I can see is that for objects the change happens immediately when the mouse button is pressed, while for groups it only happens when the mouse button is released.%%%

%%%Can confirm the issue on Windows. Will look into it.%%%

%%%Can confirm the issue on Windows. Will look into it.%%%

%%%Fixed update issue in rev44059.
Regarding second report (which is feature request) i'd prefer not to use bug tracker for such kind of things. We've already got TODO related on reviewing which commands are mostly useful from outliner and think better to handle them all at once.
Thanks for the report, but will close it now.%%%

%%%Fixed update issue in rev44059. Regarding second report (which is feature request) i'd prefer not to use bug tracker for such kind of things. We've already got TODO related on reviewing which commands are mostly useful from outliner and think better to handle them all at once. Thanks for the report, but will close it now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks for the fast fixing of this minor issue.

I downloaded the code myself and had a look into it. While doing so, I found another (minor) bug (which is still related to updating the icons, that's why I post it here): when having two outliner views open at the same time and changing renderability using the "r" hotkey, the icon in the second outliner view will only update once this outliner becomes active. For restrict selectability and visibility the icon gets updated immediately.

The same problem exists if I press the "i" key: in the second viewer, the icon (here for all three: renderability, selectability and visibility) will only be update when the other outliner becomes active (i.e. the mouse moved overt that outliner).

I am (yet?) too inexperienced in the blender code to do the changes myself, but I'll watch and learn...%%%

%%%Thanks for the fast fixing of this minor issue. I downloaded the code myself and had a look into it. While doing so, I found another (minor) bug (which is still related to updating the icons, that's why I post it here): when having two outliner views open at the same time and changing renderability using the "r" hotkey, the icon in the second outliner view will only update once this outliner becomes active. For restrict selectability and visibility the icon gets updated immediately. The same problem exists if I press the "i" key: in the second viewer, the icon (here for all three: renderability, selectability and visibility) will only be update when the other outliner becomes active (i.e. the mouse moved overt that outliner). I am (yet?) too inexperienced in the blender code to do the changes myself, but I'll watch and learn...%%%

%%%This should be fixed in svn rev44069.%%%

%%%This should be fixed in svn rev44069.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30110
No description provided.