Fix #30110: Outliner view: restriction icons not updating when toggling from Groups view

Fixed by using proper button type.